-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
-
fa96e76ab (dev), a41b6a41e (6.5), 095bfbd3e (6.6), ea63dbfa1 (dev), 38f3ab1d0 (6.6), 7434dcf61 (6.5)
Macs from around 2014 which can still run macOS 11, the oldest macOS version that Qt 6 supports, seem to crash when using Qt Quick with the default Metal renderer. OpenGL backend on these machines work fine.
GPUs on these machines are Intel HD 5000 Graphics, Intel Iris Graphics (5100) and Intel Iris Pro Graphics (5200).
If these cannot be fixed, maybe Qt could be made to pick OpenGL backend with these GPUs by default.
| For Gerrit Dashboard: QTBUG-114338 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 490804,7 | rhi: metal: Disable MTLBinaryArchive usage regardless of OS version | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 490807,6 | doc: Note in QQuickGr.Conf. that pipl.cache is disabled on Metal | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 493315,2 | rhi: metal: Disable MTLBinaryArchive usage regardless of OS version | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 493316,2 | rhi: metal: Disable MTLBinaryArchive usage regardless of OS version | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 493423,2 | doc: Note in QQuickGr.Conf. that pipl.cache is disabled on Metal | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 493424,2 | doc: Note in QQuickGr.Conf. that pipl.cache is disabled on Metal | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |